--- a/.gitignore
+++ b/.gitignore
@@ -464,3 +464,4 @@ $RECYCLE.BIN/
 #package-lock.json
 
 # End of https://www.toptal.com/developers/gitignore/api/storybookjs,windows,macos,webstorm+all,visualstudiocode,openframeworks+visualstudio,intellij+all,git,yarn,node
+.env
